[package]
name = "derivable-object-pool"
version = "0.1.0"
authors = ["Ferran Sanchez Llado"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ferranSanchezLlado/derivable-object-pool.git"
homepage = "https://github.com/ferranSanchezLlado/derivable-object-pool.git"
documentation = "https://docs.rs/derivable-object-pool"
description = "A thread-safe derivable object pool collection with automatic reusage of objects."
keywords = ["object-pool", "derivable", "thread-safe", "automatic-reusage"]
categories = ["memory-management", "concurrency", "data-structures"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivable-object-pool-macros = {version = "0.1.0", path="derivable-object-pool-macros"}
