[package]
name = "derivable-object-pool-macros"
version = "0.1.0"
authors = ["Ferran Sanchez Llado"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ferranSanchezLlado/derivable-object-pool.git"
homepage = "https://github.com/ferranSanchezLlado/derivable-object-pool.git"
documentation = "https://docs.rs/derivable-object-pool-macros"
description = "Macros for the derivable-object-pool crate"
keywords = [
    "macros",
    "object-pool",
    "derivable",
    "thread-safe",
    "automatic-reusage",
]
categories = ["memory-management", "concurrency", "data-structures"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.29"
syn = "2.0.24"

[lib]
proc-macro = true
